[gd_scene load_steps=22 format=3 uid="uid://cxgvg1ym7kxjb"]

[ext_resource type="Script" uid="uid://d3qo4n6rujsgi" path="res://scripts/tutorial_level.gd" id="1_tnuqv"]
[ext_resource type="PackedScene" uid="uid://c34abxc4q2lp0" path="res://scenes/door.tscn" id="2_e7fmg"]
[ext_resource type="Script" uid="uid://bfiqvpa4gyqj1" path="res://scripts/interactive_box.gd" id="3_box"]
[ext_resource type="PackedScene" uid="uid://bw7hdh5yqcqd4" path="res://scenes/pause_menu.tscn" id="4_pause"]
[ext_resource type="PackedScene" uid="uid://dccutkhjc0ydt" path="res://scenes/player.tscn" id="5_player"]
[ext_resource type="Environment" path="res://assets/environments/sky_environment.tres" id="6_env"]

[sub_resource type="BoxMesh" id="BoxMesh_u7i66"]
size = Vector3(20, 0.5, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ehc7"]
size = Vector3(20, 0.5, 20)

[sub_resource type="BoxMesh" id="BoxMesh_blue"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_blue"]
albedo_color = Color(0.1, 0.3, 0.8, 1)
emission_enabled = true
emission = Color(0.1, 0.3, 0.8, 1)
emission_energy_multiplier = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_red"]
size = Vector2(1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_red"]
albedo_color = Color(0.8, 0.1, 0.1, 1)
emission_enabled = true
emission = Color(0.8, 0.1, 0.1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="QuadMesh" id="QuadMesh_green"]
size = Vector2(1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_green"]
albedo_color = Color(0.1, 0.9, 0.1, 1)
emission_enabled = true
emission = Color(0.1, 0.9, 0.1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="QuadMesh" id="QuadMesh_yellow"]
size = Vector2(1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yellow"]
albedo_color = Color(1, 1, 0.1, 1)
emission_enabled = true
emission = Color(1, 1, 0.1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="QuadMesh" id="QuadMesh_purple"]
size = Vector2(1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_purple"]
albedo_color = Color(0.7, 0.1, 0.9, 1)
emission_enabled = true
emission = Color(0.7, 0.1, 0.9, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_blue"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_instr"]
bg_color = Color(0.1, 0.1, 0.1, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_prog"]
font_size = 18
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="TutorialLevel" type="Node3D"]
script = ExtResource("1_tnuqv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_max_distance = 50.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6_env")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_u7i66")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_0ehc7")

[node name="Door" parent="." instance=ExtResource("2_e7fmg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8, 0, 0)

[node name="Player" parent="." instance=ExtResource("5_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 5)

[node name="InteractiveBox" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
collision_layer = 2
collision_mask = 3
script = ExtResource("3_box")

[node name="MeshInstance3D" type="MeshInstance3D" parent="InteractiveBox"]
mesh = SubResource("BoxMesh_blue")
surface_material_override/0 = SubResource("StandardMaterial3D_blue")

[node name="RedFace" type="MeshInstance3D" parent="InteractiveBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.76)
visible = false
mesh = SubResource("QuadMesh_red")
surface_material_override/0 = SubResource("StandardMaterial3D_red")

[node name="GreenFace" type="MeshInstance3D" parent="InteractiveBox"]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -0.76, 0, 0)
mesh = SubResource("QuadMesh_green")
surface_material_override/0 = SubResource("StandardMaterial3D_green")

[node name="YellowFace" type="MeshInstance3D" parent="InteractiveBox"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0.76, 0, 0)
mesh = SubResource("QuadMesh_yellow")
surface_material_override/0 = SubResource("StandardMaterial3D_yellow")

[node name="PurpleFace" type="MeshInstance3D" parent="InteractiveBox"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, -0.76)
mesh = SubResource("QuadMesh_purple")
surface_material_override/0 = SubResource("StandardMaterial3D_purple")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractiveBox"]
shape = SubResource("BoxShape3D_blue")

[node name="TutorialUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InstructionPanel" type="Panel" parent="TutorialUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_instr")

[node name="InstructionLabel" type="Label" parent="TutorialUI/InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to the tutorial level! The box has a green left face, a yellow right face, and a purple back face. Press SPACEBAR to reveal a secret face."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="TutorialUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
text = "Tutorial Level"
label_settings = SubResource("LabelSettings_prog")

[node name="PauseMenu" parent="." instance=ExtResource("4_pause")]
process_mode = 2
visible = false

[node name="DownloadButton" type="Button" parent="TutorialUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
text = "Download 3D Model"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
